--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
       <p class="project_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
       <div class="project_content">
         <div class="project__div_top">
-          <img class="project__img_top border-radius"  src="img/project-1.jpg" alt="" class="project_top">
+          <img class="project__img_top border-radius"  src="img/project-1.jpg" alt="изображение1" class="project_top">
           <div class="project__top_hover border-radius">
             <p>Smart Home Installation</p>
           </div>
         </div>
         <div class="project__div_footer">
           <div class="project__div_position">
-            <img class="project__img_footer border-radius" src="img/project-2.jpg" alt="" class="project_footer">
+            <img class="project__img_footer border-radius" src="img/project-2.jpg" alt="изображение2" class="project_footer">
             <div class="project___footer_hover border-radius">
               <p>Sparklite App</p>
             </div>
           </div>
           <div class="project__div_position">
-            <img class="project__img_footer border-radius" src="img/project-3.jpg" alt="" class="project_footer">
+            <img class="project__img_footer border-radius" src="img/project-3.jpg" alt="изображение3" class="project_footer">
             <div class="project___footer_hover border-radius">
               <p>Car-Rapetition App</p>
             </div>
