--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,8 @@
           <span> Message </span>
             <textarea
               class=" border-radius"
-              name=""
-              id=""
+              name="form_contact"
+              id="message"
               cols="30"
               rows="10"
               placeholder="Your Message"
@@ -84,10 +84,7 @@
       <div >
         <iframe
           src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=Moscow%2C%20Russia+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"
-          frameborder="0"
-          scrolling="no"
-          marginheight="0"
-          marginwidth="0"
+ 
         ></iframe>
         <div
           style="
@@ -113,12 +110,7 @@
             ></small
           >
         </div>
-        <style>
-          #gmap_canvas img {
-            max-width: none !important;
-            background: none !important;
-          }
-        </style>
+
       </div>
     </div>
 
